# gri

./: .cvsignore  .gitignore  AUTHOR  AUTHOR-NOTES  COPYING  ChangeLog  CmdFile.hh  DISCUSSION-error-levels  DataFile.hh  GCounter.hh  GMatrix.hh  G_string.cc  G_string.hh  GriColor.cc  GriColor.hh  GriPath.cc  GriPath.hh  GriState.cc  GriState.hh  GriTimer.hh  INSTALL  Makefile.am  Makefile.dj2  Makefile.in  NEWS  README  README-SunOS5  README-linux-redhat  README-solaris  STATUS  Synonym.hh  THANKS  TO-DO  UpdateVersion  Variable.hh  assert.cc  check.pl  checklist_for_release  chopword.cc  close.cc  (+114 more)
darwinport/: Portfile
darwinport/files/: patch-doc-examples.diff  patch-doc.diff  patch-gritexi.diff  patch-startup.diff
debian/: 00Porters.readme  Makefile.am  Makefile.in  README.Debian  README.Debian.template  changelog  control  control.unofficial  copyright  copyright.template  gri-el.emacsen-install  gri-el.emacsen-remove  gri-el.emacsen-startup  gri-html-doc.doc-base  gri-html-doc.emacsen-startup  gri-html-doc.preinst  gri-pdf-doc.doc-base  gri-ps-doc.doc-base  gri.doc-base  gri.emacsen-install  gri.emacsen-remove  gri.man  gri.postinst  rules  watch
debian/source/: Makefile.am  Makefile.in
doc/: .cvsignore  .gitignore  FAQ  FAQ.html  HTML_subdivide  Makefile  Makefile.am  Makefile.in  README  SFindex.html  archive-to-html.pl  cmdrefcard.pl  cmdrefcard.tex  favicon-gri.gri  firefoxsearch.xml  gri-manpage-SunOS5.1  gri-manpage-debian.1  gri-manpage-redhat.1  gri-manpage-solaris.1  gri-manpage.1  gri.archive  gri.texi  gri.texim  gri2html  gri2texi  gri_merge.1-skel  gri_unpage.1  gri_unpage.1-skel  make_html_builtinindex  make_html_commandindex  make_html_index  refcard.tex  texim2texi  texinfo2HTML  version.texi
doc/cookbook/: Makefile  cookbook.html  cookbook.tex-broken  discussion.html  gri-cookbook-0.1.1.spec  gri-cookbook-0.1.1.tgz  gri-cookbook-0.1.2.spec  gri-cookbook-0.1.2.tgz  gri-cookbook-0.1.3.spec  gri-cookbook-0.1.3.tgz  gri-cookbook-0.1.4.spec  gri2html  index.html  recipes.html  submitting.html
doc/cookbook/1/: example.gri  example.html  example.ps
doc/cookbook/10/: example.gri  example.html  example.ps
doc/cookbook/11/: example.gri  example.html  example.ps
doc/cookbook/12/: example-vertical.gri  example-vertical.html  example.gri  example.html  example.ps
doc/cookbook/13/: example.gri  example.html  example.ps
doc/cookbook/14/: example.gri  example.ps
doc/cookbook/2/: example.gri  example.html  example.ps
doc/cookbook/3/: example.gri  example.html  example.ps
doc/cookbook/4/: bravo1.25db  example.gri  example.html  example.ps
doc/cookbook/5/: example.gri  example.html  example.ps
doc/cookbook/6/: example.gri  example.html  example.ps
doc/cookbook/7/: example.gri  example.html  example.ps
doc/cookbook/8/: example.gri  example.html  example.ps
doc/cookbook/9/: example.gri  example.html  example.ps  example9.colorscale
doc/cookbook/debian/: README.Debian  changelog  control  copyright  doc-base  menu.ex  rules
doc/examples/: .gitignore  FEM.ps  FEM.txt  Makefile  Makefile.am  Makefile.in  example1.gri  example1.ps  example1.txt  example10.gri  example10.ps  example10.txt  example10color.gri  example10color.ps  example10color.txt  example11.gri  example11.ps  example11.txt  example12.gri  example12.ps  example12.txt  example13.gri  example13.ps  example13.txt  example2.gri  example2.ps  example2.txt  example3.gri  example3.ps  example3.txt  example4.gri  example4.ps  example4.txt  example5.gri  example5.ps  example5.txt  example6.gri  example6.ps  example6.txt  example6color.gri  (+16 more)
doc/resources/: .gitignore  Makefile  Makefile.am  Makefile.in  bottom_banner.gri  bottom_banner.ps  gri-logo-to-gif.sh  logo.eps  logo.gri  logo.ppm  symbols.gri  symbols.ps  top_banner.gri  top_banner.ps  version-diagram-2.2.eps  version-diagram-2.2.gri  version-diagram-2.2.txt  version-diagram-2.4.eps  version-diagram-2.4.gri  version-diagram-2.4.txt
doc/screenshots/: .gitignore  Makefile  Makefile.am  Makefile.in
doc/sourceforge/: INSTALL  Makefile  README  bugs.php  contact.php  developers.php  docs.php  download.php  gri.css  index-old.php  index.html  index.php  main.php  news.php  search_concept.php  subroutines.php  tabs.gri  users.php
doc/tst_suite/: .gitignore  Makefile  Makefile.am  Makefile.in  tst_IO.gri  tst_control.gri  tst_rpn.gri  tst_var_syn.gri
fink/: README  gri.info
popt/: CHANGES  Makefile  Makefile.in  config.cache  config.h  config.status  configure  configure.in  popt.cc  popt.h
src/: .draw.cc.swp  .gitignore  .set.cc.swp  CmdFile.hh  DataFile.hh  GCounter.hh  GMatrix.hh  G_string.cc  G_string.hh  GriColor.cc  GriColor.hh  GriPath.cc  GriPath.hh  GriState.cc  GriState.hh  GriTimer.hh  Makefile.am  Makefile.dj2  Makefile.in  Synonym.hh  Variable.hh  assert.cc  chopword.cc  close.cc  command.cc  command.hh  convert.cc  debug.cc  debug.hh  defaults.hh  delete.cc  differ.cc  doline.cc  draw.cc  endup.cc  errors.hh  expect.cc  extern.hh  file.cc  files.hh  (+75 more)
src/popt/: CHANGES  Makefile.am  Makefile.in  popthelp.c
